<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/get_started_button"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sports2" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="163dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/gameface_sports_photography"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/gameface" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/desired_league"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:text="@string/next"
        android:textColor="@color/lime"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="203dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <ToggleButton
            android:id="@+id/btnMensLeague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/togglebutton_background"
            android:text="@string/mens"
            android:textColor="@color/lime"
            android:textOff="@string/mens"
            android:textOn="@string/mens"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/btnWomansLeague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/togglebutton_background"
            android:text="@string/togglebutton"
            android:textColor="@color/lime"
            android:textOff="@string/womans"
            android:textOn="@string/womans"
            android:textSize="18sp"
            tools:text="Womans" />

        <ToggleButton
            android:id="@+id/btnCoedLeague"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/togglebutton_background"
            android:text="@string/coed"
            android:textColor="@color/lime"
            android:textOff="@string/coed"
            android:textOn="@string/coed"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>